2008-01-04  Adam Treat  <treat@kde.org>

        Reviewed by George Staikos.

        Add fixedLayoutSize feature to ScrollView to allow for controlling the
        layout beyond the constraint of the current viewports dynamic size

        * css/MediaQueryEvaluator.cpp:
        (WebCore::heightMediaFeatureEval):
        (WebCore::widthMediaFeatureEval):
        * dom/Element.cpp:
        (WebCore::Element::clientWidth):
        (WebCore::Element::clientHeight):
        * loader/FrameLoaderClient.cpp:
        (WebCore::FrameLoaderClient::transitionToCommittedForNewPage):
        * loader/FrameLoaderClient.h:
        * page/FrameView.cpp:
        (WebCore::FrameView::layout):
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::ScrollView):
        (WebCore::ScrollView::layoutWidth):
        (WebCore::ScrollView::layoutHeight):
        (WebCore::ScrollView::fixedLayoutSize):
        (WebCore::ScrollView::setFixedLayoutSize):
        (WebCore::ScrollView::useFixedLayout):
        (WebCore::ScrollView::setUseFixedLayout):
        * platform/ScrollView.h:
        * rendering/RenderView.cpp:
        (WebCore::RenderView::viewHeight):
        (WebCore::RenderView::viewWidth):
        * rendering/RenderView.h:

2009-01-03  Rob Buis  <rwlbuis@gmail.com>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=22660
        SVG elements that are moved are nor fully invalidated/earsed

        Mark the SVG root as needing a layout when its position changes.

        Tests: svg/custom/circle-move-invalidation.svg

        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::position):
        * rendering/RenderSVGRoot.h:

2009-01-03  Steve Falkenburg  <sfalken@apple.com>

        Build fix.

        * loader/FrameLoader.h:

2009-01-02  Cary Clark  <caryclark@google.com>

        Reviewed and landed by Darin Adler.

        Bug 22963: write icons before reading them
        https://bugs.webkit.org/show_bug.cgi?id=22963
